--- a/app.config.ini
+++ b/app.config.ini
@@ -5,3 +5,11 @@ username = 'root'
 password = ''
 database = 'gravelpit'
 charset  = 'utf8'
+
+[gravel]
+maintenance_mode = false
+developer_mode = true;
+
+[php]
+error_reporting = -1
+display_errors = true
