Updating to latest version

--- a/app/app.config.ini
+++ b/app/app.config.ini
@@ -1,15 +1,43 @@
+; Gravel framework application configuration file
 [database]
 driver   = 'mysql'
 hostname = 'localhost'
-username = 'root'
-password = ''
+username = 'gravelpit'
+password = 'gravelpit'
 database = 'gravelpit'
 charset  = 'utf8'
+table_prefix = '';
+
+[email]
+hostname = ''
+username = ''
+password = ''
+secure = true
+transport = 'ssl'
+port = 465
+default_from_address = ''
+default_from_name = ''
 
 [gravel]
-maintenance_mode = false
+; debug mode (outputs raw html)
+debug_mode = false
+
+; close the frontend off for maintenance
+front_maintenance_mode = false
+
+; close the backend off for maintenance
+admin_maintenance_mode = false
+
+; tidy html requires the tidy extension to be enabled
+; be aware it does not play nicely with html5
 tidy_html = false
 
+; whether or not auto built forms will use csrf tokens
+csrf_tokens = true
+
 [php]
+; be aware that some hosts do not allow the changing of php ini settings at runtime
+; comment the following lines by adding a ; to the start of the line
 error_reporting = -1
 display_errors = true
+date.timezone = 'Europe/London'
